--- a/web/style.css
+++ b/web/style.css
@@ -4,7 +4,7 @@
   	font-size: 16px;
 }
 body {
-  	background-color: #435165;
+  	background-color: #654343;
 }
 .login {
   	width: 400px;
@@ -31,7 +31,7 @@ body {
   	align-items: center;
   	width: 50px;
   	height: 50px;
-  	background-color: #3274d6;
+  	background-color: #d63232;
   	color: #ffffff;
 }
 .login form input[type="password"], .login form input[type="text"] {
@@ -45,7 +45,7 @@ body {
   	width: 100%;
   	padding: 15px;
  	margin-top: 20px;
-  	background-color: #3274d6;
+  	background-color: #d63232;
   	border: 0;
   	cursor: pointer;
   	font-weight: bold;
@@ -53,7 +53,7 @@ body {
   	transition: background-color 0.2s;
 }
 .login form input[type="submit"]:hover {
-	background-color: #2868c7;
+	background-color: #c72828;
   	transition: background-color 0.2s;
 }
 .navtop {
