--- a/web/style.css
+++ b/web/style.css
@@ -57,7 +57,7 @@ body {
   	transition: background-color 0.2s;
 }
 .navtop {
-	background-color: #2f3947;
+	background-color: #d63232;
 	height: 60px;
 	width: 100%;
 	border: 0;
@@ -83,7 +83,7 @@ body {
 .navtop div a {
 	padding: 0 20px;
 	text-decoration: none;
-	color: #c1c4c8;
+	color: #fff;
 	font-weight: bold;
 }
 .navtop div a i {
@@ -104,7 +104,7 @@ body.loggedin {
 	padding: 25px 0;
 	font-size: 22px;
 	border-bottom: 1px solid #e0e0e3;
-	color: #4a536e;
+	color: #d63232;
 }
 .content > p, .content > div {
 	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
@@ -117,7 +117,7 @@ body.loggedin {
 }
 .content > p table td:first-child, .content > div table td:first-child {
 	font-weight: bold;
-	color: #4a536e;
+	color: #d63232;
 	padding-right: 15px;
 }
 .content > div p {
